--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	
 	<center>
 		<a href="https://github.com/marcos-gabriel" target="_blank">
-			<img src="imagens/perfil.jpg"
+			<img src="imagens/perfil.jpg">
 		</a>
 	</center>
 
