--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <body>
 	
 	<h1 style="text-align:center;">Seja bem vindo(a) a minha página!</h1>
@@ -8,12 +9,31 @@
 	<p style="text-align:center;">Estou criando essa página para testar os conhecimentos adquiridos em um curso. O meu objetivo é me tornar um programador algum dia!</p>
 	
 	<center>
-		<a href="https://github.com/marcos-gabriel" target="_blank">
-			<img src="imagens/perfil.jpg">
-		</a>
+		<img src="imagens/perfil.jpg">
 	</center>
 
-	<p style="text-align:center;">Contato: marcoseca772@gmail.com</p>
+	<p style="text-align:center;">Contatos</p>
+	
+	<center>
+		<a href="https://bit.ly/3dvj3gI" target="_blank">
+			<img src="imagens/wpp.jpg" width="40"; height="40"; float="left">	
+	
+		<a href="https://www.instagram.com/geodesico_/" target="_blank">
+			<img src="imagens/insta.jpg" width="40"; height="40"; float="left">
+		
+		<a href="https://github.com/marcos-gabriel" target="_blank">
+			<img src="imagens/github.jpg" width="40"; height="40"; float="left">
+
+		<a href="mailto:marcoseca772@gmail.com" target="_blank">
+			<img src="imagens/gmail.jpg" width="40"; height="40"; float="left">
+	</center>
+	
+	<center>
+		<audio controls>
+			<source src="musicas/kakashi.mp3" type="audio/mpeg">
+		</audio>
+	</center>
+	
 
 <body>
 </html>
