--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<h1 style="text-align:center;">Seja bem vindo(a) a minha página!</h1>
 
 	<p style="text-align:center;">Olá, meu nome é Marcos Gabriel e eu sou estudante de Engenharia Cartográfica e de Agrimensura na UFRA - Belém</p>
-	<p style="text-align:center;">Estou criando essa página para testar os conhecimentos adquiridos em um curso. O meu objetivo é me tornar um programador algum dia!</p>
+	<p style="text-align:center;">Estou criando essa página para testar os conhecimentos adquiridos em um curso. O meu objetivo é me tornar programador algum dia!</p>
 	
 	<center>
 		<img src="imagens/perfil.jpg">
